@@ -14,6 +14,7 @@ Version 0.6.0~dev
 	* Add set_aspect_ratio to ffmpeg worker, refs: #5763.
 	* Support IMX codec in ffmpeg worker, refs: #5763.
 	* Support XDCAM HD in ffmpeg worker, refs: #5763.
+	* Support mxf muxing in ffmpeg worker, refs: #5763.
 
 Version 0.5.0 Released on 2012/03/29
 
